--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -239,7 +239,7 @@ jobs:
               gcloud --log-http app deploy gcloudApp/app.yaml
     gcloudBuild:
         runs-on: ubuntu-latest
-        #if: github.event.schedule == '0 1 * * *'
+        if: github.event.schedule == '0 1 * * *'
         steps:
         - uses: actions/checkout@main
         - run: |
