--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -249,6 +249,7 @@ jobs:
     inboxdollars:
         runs-on: ubuntu-latest
         #if: github.event.schedule == '0 */1 * * *'
+        if: github.event_name == 'dummy'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
