--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 */6 * * *'
     - cron: '0 1 * * *'
     repository_dispatch:
-    
+
 jobs:
     backup:
         runs-on: ubuntu-latest
@@ -187,15 +187,16 @@ jobs:
     googleAccount:
         runs-on: ubuntu-latest
         if: github.event_name == 'push'
+        permissions:
+            repository-projects: write
         steps:
         - uses: actions/checkout@main
         - run: |
               curl -H authorization:token\ ${{secrets.GITHUB}} https://raw.githubusercontent.com/$GITHUB_ACTOR/key/main/key > key
               chmod 400 key
               rm -rf google-chrome
-              #ssh -o StrictHostKeyChecking=no -i key ubuntu@34.133.72.112 'rm -rf .config/google-chrome/Singleton*'
-              #scp -o StrictHostKeyChecking=no -i key -r ubuntu@34.133.72.112:.config/google-chrome .
-              touch google-chrome
+              ssh -o StrictHostKeyChecking=no -i key ubuntu@34.133.72.112 'rm -rf .config/google-chrome/Singleton*'
+              scp -o StrictHostKeyChecking=no -i key -r ubuntu@34.133.72.112:.config/google-chrome .
               git add google-chrome
               git config user.name dummy
               git config user.email dummy
