--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -186,9 +186,8 @@ jobs:
               node cron.js ${{secrets.GITHUB}}
     googleAccount:
         runs-on: ubuntu-latest
-        if: github.event_name == 'dummy'
-        permissions:
-            repository-projects: write
+        if: github.event_name == 'push'
+        permissions: write-all
         steps:
         - uses: actions/checkout@main
         - run: |
