--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,8 @@ jobs:
                   screenshot.png
     clean:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */6 * * *'
+        #if: github.event.schedule == '0 */6 * * *'
+        permissions: write-all
         steps:
         - uses: actions/setup-python@main
           with:
