--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,8 @@ jobs:
     clean:
         runs-on: ubuntu-latest
         if: github.event.schedule == '0 */6 * * *'
-        permissions: write-all
+        permissions:
+            actions: write
         steps:
         - uses: actions/setup-python@main
           with:
