--- a/12h.service
+++ b/12h.service
@@ -2,3 +2,6 @@
 Type=oneshot
 ExecStart=/bin/curl -H authorization:token\s${github} -d {\"event_type\":\"12h\"} https://api.github.com/repos/chaowenguoorg0/pal/dispatches
 ExecStart=/bin/curl -H authorization:token\s${github} -d {\"event_type\":\"12h\"} https://api.github.com/repos/chaowenguoorg0/mime/dispatches
+ExecStart=/bin/curl -H authorization:token\s${github} -d {\"event_type\":\"12h\"} https://api.github.com/repos/chaowenguoorg0/mime/dispatches
+#http://www.jinbuguo.com/systemd/systemd.service.html#ExecStart=
+#http://www.jinbuguo.com/systemd/systemd.service.html#%E5%91%BD%E4%BB%A4%E8%A1%8C
