--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,19 +52,19 @@ jobs:
               curl https://raw.githubusercontent.com/$GITHUB_REPOSITORY_OWNER/common/main/clean.py | python - ${{secrets.GITHUB_TOKEN}}
     subscribe:
         runs-on: ubuntu-latest
-        if: github.event.action == 'subscribe'
+        if: github.event.action == '12h'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
           with:
-              node-version: 17.x
+              node-version: 18.x
         - env:
               PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
               DEBUG: pw:api
           run: |
+              curl https://raw.githubusercontent.com/$GITHUB_REPOSITORY_OWNER/common/main/package.json > package.json
               npm install playwright-chromium
               npx playwright install ffmpeg
-              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               xvfb-run node subscribe.js ${{secrets.PASSWORD}}
         - uses: actions/upload-artifact@main
           with:
