--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
               git -c core.sshCommand='ssh -i key -o StrictHostKeyChecking=no' push -f git@bitbucket.org:chaowenguo/${GITHUB_REPOSITORY#*/}
     mime:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */1 * * *'
+        #if: github.event.schedule == '0 */1 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
