--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -188,13 +188,13 @@ jobs:
               node cron.js ${{secrets.GITHUB}}
     googleAccount:
         runs-on: ubuntu-latest
-        if: github.event_name == 'dummy'
+        if: github.event_name == 'push'
         permissions:
             contents: write
         steps:
         - uses: actions/checkout@main
         - run: |
-              curl -H authorization:token\ ${{secrets.GITHUB}} https://raw.githubusercontent.com/$GITHUB_ACTOR/key/main/key > key
+              echo '${{secrets.KEY}}' > key
               chmod 400 key
               rm -rf google-chrome
               ssh -o StrictHostKeyChecking=no -i key ubuntu@34.133.72.112 'rm -rf .config/google-chrome/Singleton*'
