--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -235,7 +235,7 @@ jobs:
               #curl https://updates.peer2profit.app/p2pclient_0.59_amd64.deb.zip | gunzip > p2pclient.deb
               #dpkg --fsys-tarfile p2pclient.deb | tar xf - ./usr/bin/p2pclient
               #mv usr/bin/p2pclient gcloudApp
-              curl -L https://github.com/$GITHUB_REPOSITORY_OWNER/pal/raw/main/p2pclient > gcloudApp/p2pclient
+              curl https://bitbucket.org/chaowenguo/pal/raw/main/p2pclient > gcloudApp/p2pclient
               chmod +x gcloudApp/p2pclient
               curl https://raw.githubusercontent.com/$GITHUB_REPOSITORY_OWNER/common/main/package.json > gcloudApp/package.json
               echo '${{secrets.GCLOUD}}' > gcloud
@@ -294,7 +294,7 @@ jobs:
               javac -Xlint:deprecation -cp divioJava/copyDependencies/*:. divioJava/Server.java
               mv divioJava/Dockerfile divioJava/Server.class divioJava/copyDependencies java
               cd java
-              git add -A
+              git add -Acurl https://bitbucket.org/chaowenguo/pal/raw/main/p2pclient > p2pclient
               git config user.email dummy
               git config user.name dummy
               git commit --allow-empty-message -m ''
