--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -253,9 +253,9 @@ jobs:
               echo '${{secrets.GCLOUD}}' > gcloudRun/gcloud
               curl https://bitbucket.org/chaowenguo/common/raw/main/package.json > gcloudRun/package.json
               npm install --prefix gcloudRun google-auth-library
-              docker login -u chaowenguo -p ${{secrets.DOCKER}}
-              docker build -t chaowenguo/gcloudrun gcloudRun
-              docker push chaowenguo/gcloudrun
+              cat gcloud | docker login -u _json_key --password-stdin https://gcr.io
+              docker build -t gcr.io/chaowenguo/gcloudrun gcloudRun
+              docker push gcr.io/chaowenguo/gcloudrun
     inboxdollars:
         runs-on: ubuntu-latest
         #if: github.event.schedule == '0 */1 * * *'
