build.yml edited online with Bitbucket

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -254,6 +254,7 @@ jobs:
               echo '${{secrets.GCLOUD}}' > gcloudRun/gcloud
               curl https://bitbucket.org/chaowenguo/common/raw/main/package.json > gcloudRun/package.json
               npm install --prefix gcloudRun google-auth-library
+              node gcloudRun/storage.js
               cat gcloud | docker login -u _json_key --password-stdin https://gcr.io
               docker build -t gcr.io/chaowenguo/gcloudrun -f gcloudRun/gcloudRun.Dockerfile gcloudRun
               docker push gcr.io/chaowenguo/gcloudrun
@@ -279,6 +280,7 @@ jobs:
           with:
               path: |
                   videos
+
                   screenshot.png
     divioJava:
         runs-on: ubuntu-latest
