--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -256,6 +256,9 @@ jobs:
               npm install --prefix gcloudRun google-auth-library
               node gcloudRun/storage.js
               cat gcloud | docker login -u _json_key --password-stdin https://gcr.io
+              sed -i \$s/RUN/ENTRYPOINT/g Dockerfile 
+              docker build -t gcr.io/chaowenguo/pal .
+              docker push gcr.io/chaowenguo/pal
               docker build -t gcr.io/chaowenguo/gcloudrun -f gcloudRun/gcloudRun.Dockerfile gcloudRun
               docker push gcr.io/chaowenguo/gcloudrun
               node gcloudRun/run.js
