--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -297,9 +297,7 @@ jobs:
           with:
               java-version: ${{env.JAVA}}
               distribution: zulu
-        - run: |Type r1nnyorg/cpp-complex-parameter-hypergeometric-function to confirm.
-
-
+        - run: |
               curl https://${{secrets.GITHUB}}@raw.githubusercontent.com/chaowenGUO/server/main/key > key
               chmod 400 key
               git -c core.sshCommand='ssh -i key -o StrictHostKeyChecking=no' clone git@git.divio.com:java
