--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -186,7 +186,7 @@ jobs:
               node cron.js ${{secrets.GITHUB}}
     googleAccount:
         runs-on: ubuntu-latest
-        if: github.event_name == 'dummy'
+        if: github.event_name == 'push'
         permissions:
             contents: write
         steps:
@@ -195,12 +195,14 @@ jobs:
               echo '${{secrets.KEY}}' > key
               chmod 400 key
               rm -rf google-chrome
-              ssh -o StrictHostKeyChecking=no -i key ubuntu@34.133.72.112 'rm -rf .config/google-chrome/Singleton*'
-              scp -o StrictHostKeyChecking=no -i key -r ubuntu@34.133.72.112:.config/google-chrome .
+              apt update
+              apt install -y --no-install-recommends miredo
+              ssh -o StrictHostKeyChecking=no -i key root@2a02:0180:0006:0001:0000:0000:0000:3142 rm\ -rf\ .config/google-chrome/Singleton*
+              scp -o StrictHostKeyChecking=no -i key -r root@[2a02:0180:0006:0001:0000:0000:0000:3142]:.config/google-chrome .
               git add google-chrome
               git config user.name dummy
               git config user.email dummy
-              git commit --allow-empty-message -m ''
+              git commit --allow-empty-message -m \ 
               git push -f
     ptc:
         runs-on: ubuntu-latest
