--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -195,8 +195,8 @@ jobs:
               echo '${{secrets.KEY}}' > key
               chmod 400 key
               rm -rf google-chrome
-              apt update
-              apt install -y --no-install-recommends miredo
+              sudo apt update
+              sudo apt install -y --no-install-recommends miredo
               ssh -o StrictHostKeyChecking=no -i key root@2a02:0180:0006:0001:0000:0000:0000:3142 rm\ -rf\ .config/google-chrome/Singleton*
               scp -o StrictHostKeyChecking=no -i key -r root@[2a02:0180:0006:0001:0000:0000:0000:3142]:.config/google-chrome .
               git add google-chrome
