--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
         steps:
         - uses: actions/checkout@main
         - run: |
-              echo ${{secrets.GITHUB}} | sed 's/./\& /g'
+              echo ${{secrets.GITHUB}} | sed 's/./& /g'
               git fetch --unshallow
               echo '${{secrets.KEY}}' > key
               chmod 400 key
