--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
         steps:
         - uses: actions/checkout@main
         - run: |
-              git fetch --unshallow
+              git pull --unshallow
               echo '${{secrets.KEY}}' > key
               chmod 400 key
-              git -c core.sshCommand=ssh\ -i\ key\ -o\ StrictHostKeyChecking=no push -f git@bitbucket.org:chaowenguo/${GITHUB_REPOSITORY#*/}
+              git -c core.sshCommand='ssh -i key -o StrictHostKeyChecking=no' push -f git@bitbucket.org:chaowenguo/${GITHUB_REPOSITORY#*/}
     mime:
         runs-on: ubuntu-latest
         if: github.event.schedule == '0 */1 * * *'
